--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
 .App {
-  text-align: center;
+    font-size: 16px;
+    padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fade {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 100;
+    background: gray;
+    opacity: 0.3;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 105;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.modal__content {
+    position: relative;
+    border-radius: 15px;
+    background-color: white;
+    padding: 30px;
+    padding-right: 45px;
+    box-sizing: border-box;
+    max-width: 800px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.modal__title {
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.modal__closer {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.modal__closer:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transform: rotate(45deg);
+    top: calc(50% - 1px);
+    left: 0;
+}
+
+.modal__closer:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transform: rotate(-45deg);
+    top: calc(50% - 1px);
+    left: 0;
+}
+
+.modal__text {
+    font-size: 18px;
+}
+
+.modal__buttons {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
 }
